--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -58,6 +58,9 @@ jobs:
           name: lambda-archive
           path: lambda.zip
 
+      - name: listing
+        run: tree
+
       - name: Terraform Format
         id: fmt
         run: terraform fmt -check
