--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: lambda-archive
-          path: terraform/lambda.zip
+          path: terraform/
 
       - name: listing
         run: tree
