--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,12 +14,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-python@v3
         with:
-          node-version: 14
+          python-version: '3.x'
+          architecture: 'x64'
+          cache: 'pip'
 
-      - run: npm ci
+      - run: pip install -r requirements.txt
         working-directory: src
+
+      - run: tree
 
       - name: Build artifact
         working-directory: src
