--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,14 +20,15 @@ jobs:
           architecture: 'x64'
           cache: 'pip'
 
-      - run: pip install -r requirements.txt -d .
+      - name: Install dependencies
         working-directory: src
+        run: pip install -r requirements.txt -t ./package
 
       - run: tree
 
       - name: Build artifact
         working-directory: src
-        run: zip -r ../lambda.zip *.js node_modules
+        run: zip -r ../lambda.zip * -x requirements.txt
 
       - name: Archive artifacts
         if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
