--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,10 +2,11 @@ name: "Pipeline"
 
 on:
   push:
-
-permissions:
-  id-token: write
-  contents: read
+    paths-ignore:
+      - 'README.md'
+    branches:
+      - main
+  pull_request:
 
 jobs:
   build:
@@ -14,16 +15,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-python@v3
         with:
-          node-version: 14
+          python-version: '3.x'
+          architecture: 'x64'
+          cache: 'pip'
 
-      - run: npm ci
-        working-directory: src
+      - name: Install dependencies
+        run: pip install -r src/requirements.txt -t ./package
 
-      - name: Build artifact
+      - name: Package dependencies
+        working-directory: package
+        run: zip -r ../lambda.zip .
+      
+      - name: Package code
         working-directory: src
-        run: zip -r ../lambda.zip *.js node_modules
+        run: zip -g ../lambda.zip * -x requirements.txt
 
       - name: Archive artifacts
         if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
@@ -33,6 +40,10 @@ jobs:
           path: lambda.zip
 
   deploy:
+    permissions:
+      id-token: write
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
