Use ARM after all...

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: "{{defaultContext}}:src"
+          platforms: linux/arm64
           push: false
           load: true
           tags: myimage:latest
