Added makefile targets and updated the README

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,6 +13,11 @@ name: "CodeQL"
 
 on:
   push:
+    paths-ignore:
+      - 'README.md'
+      - 'Makefile'
+      - 'example-event.json'
+      - 'LICENSE.md'
     branches: [ main ]
   schedule:
     - cron: '21 22 * * 1'
