--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,5 @@
-boto3
-aws-xray-sdk
-botocore
-cryptography
-pyjwt
-requests
+boto3==1.24.35
+botocore==1.27.35
+cryptography==37.0.4
+pyjwt==2.4.0
+requests==2.28.1
