--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -22,6 +22,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.9'
+    - name: Install pytest
+      run: pip install pytest-cov
     - name: Install requirements
       run: pip install -r requirements.txt
     - name: Run tests and collect coverage
