--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,14 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
+      interval: "weekly"
+  # Maintain dependencies for Terraform
+  - package-ecosystem: "terraform"
+    directory: "/terraform"
+    schedule:
       interval: "daily"
-  # Maintain dependencies for Docker
-  - package-ecosystem: "docker"
-    directory: "/"
+  # Maintain dependencies for Pip
+  - package-ecosystem: "pip"
+    directory: "/src"
     schedule:
       interval: "daily"
