Split up python scripts and added first unit tests

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "get-cookies"
+name = "get_cookies"
 version = "0.1.0"
 description = ""
 authors = ["Melvyn de Kort <melvyn@mdekort.nl>"]
@@ -11,9 +11,10 @@ PyJWT = "^2.8.0"
 requests = "^2.31.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^7.4.2"
 boto3 = "^1.28.57"
 moto = "^4.2.5"
+requests-mock = "^1.11.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
