--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -15,6 +15,7 @@ pytest = "^7.4.2"
 boto3 = "^1.28.57"
 moto = "^4.2.5"
 requests-mock = "^1.11.0"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
