--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -28,4 +28,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: python-coverage
-          path: coverage.xml
+          path: src/coverage.xml
