--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,6 +43,8 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     needs: build
+    env:
+      TF_TOKEN_app_terraform_io: "${{ secrets.TF_API_TOKEN }}"
     if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
     defaults:
       run:
