--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -5,7 +5,7 @@ on:
   push:
     paths:
       - '.github/workflows/codecov.yml'
-      - 'src/'
+      - 'src/**'
     branches:
       - main
   pull_request:
