Use manylinux2014 variant of cryptography library, since Lambda needs it

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,8 +5,8 @@ on:
   push:
     paths:
       - '.github/workflows/pipeline.yml'
-      - 'src/'
-      - 'terraform/'
+      - 'src/**'
+      - 'terraform/**'
     branches:
       - main
   pull_request:
@@ -23,10 +23,12 @@ jobs:
       - name: Generate coverage report
         working-directory: src
         run: |
+          pip install --upgrade pip
           pip install poetry
           poetry install
+          poetry run pytest
           poetry build
-          poetry run pip install --upgrade -t package dist/*.whl
+          poetry run pip install --upgrade --platform manylinux2014_x86_64 --only-binary=:all: -t package dist/*.whl
           cd package
           zip -r ../lambda.zip . -x '*.pyc'
       - name: Archive artifact
