--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -9,7 +9,7 @@ python = "^3.9"
 cryptography = "^41.0.4"
 PyJWT = "^2.8.0"
 requests = "^2.31.0"
-urllib3 = "^1.26.16"
+validators = "^0.22.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
