--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -10,10 +10,11 @@ cryptography = "^41.0.4"
 PyJWT = "^2.8.0"
 requests = "^2.31.0"
 validators = "^0.22.0"
+urllib3 = "< 2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
-boto3 = "^1.28.57"
+boto3 = "^1.28.62"
 moto = "^4.2.5"
 requests-mock = "^1.11.0"
 pytest-cov = "^4.1.0"
