Updated some github actions

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -11,9 +11,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@master
+        uses: actions/setup-python@v3
         with:
           python-version: 3.9
       - name: Generate coverage report
