Create lambda.zip directly at target location

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,13 +25,13 @@ jobs:
           poetry build
           poetry run pip install --upgrade --platform manylinux2014_x86_64 --only-binary=:all: -t package dist/*.whl
           cd package
-          zip -r ../lambda.zip . -x '*.pyc'
+          zip -r ../terraform/lambda.zip . -x '*.pyc'
       - name: Archive artifact
         if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
         uses: actions/upload-artifact@v3
         with:
           name: lambda-archive
-          path: lambda.zip
+          path: terraform/lambda.zip
 
   deploy:
     permissions:
