--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ PyJWT = "^2.8.0"
 requests = "^2.31.0"
 validators = "^0.22.0"
 urllib3 = "< 2"
+opentelemetry-api = "^1.20.0"
+opentelemetry-sdk = "^1.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
