--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,13 +6,25 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    assignees:
+      - "melvyndekort"
+    reviewers:
+      - "melvyndekort"
   # Maintain dependencies for Terraform
   - package-ecosystem: "terraform"
     directory: "/terraform"
     schedule:
       interval: "daily"
+    assignees:
+      - "melvyndekort"
+    reviewers:
+      - "melvyndekort"
   # Maintain dependencies for Pip
   - package-ecosystem: "pip"
     directory: "/src"
     schedule:
       interval: "daily"
+    assignees:
+      - "melvyndekort"
+    reviewers:
+      - "melvyndekort"
