--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Run tests
         run: poetry run pytest
       - name: Build artifact
-      - run: |
+        run: |
           poetry build
           poetry run pip install --upgrade --platform manylinux2014_aarch64 --only-binary=":all:" -t package dist/*.whl
           cd package
