--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,6 +52,7 @@ jobs:
 
   coverage:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Download coverage artifact
         uses: actions/download-artifact@v3
