--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,9 +9,12 @@ on:
       - '.github/workflows/pipeline.yml'
       - 'get_cookies/**'
       - 'tests/**'
-      - 'poetry.lock'
       - 'pyproject.toml'
+      - 'poetry.lock'
+      - 'codecov.yml'
   pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -32,6 +35,7 @@ jobs:
       - name: Run tests
         run: poetry run pytest --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -47,7 +51,6 @@ jobs:
           cd package
           zip -qr ../lambda.zip . -x '*.pyc'
       - name: Archive lambda artifact
-        if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
         uses: actions/upload-artifact@v3
         with:
           name: lambda
@@ -55,13 +58,13 @@ jobs:
           if-no-files-found: error
 
   deploy:
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     permissions:
       id-token: write
       contents: read
       pull-requests: write
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
