--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,21 @@ cryptography = "^43"
 PyJWT = "^2.10"
 requests = "^2"
 validators = "^0.34"
-urllib3 = "< 2"
+urllib3 = "^1.26"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^8.3"
-boto3 = "^1.37"
+boto3 = "^1.37.0"
+botocore = "^1.37.0"
 moto = "^5.1"
 requests-mock = "^1.12"
 pytest-cov = "^6.1"
+
+[tool.pytest.ini_options]
+# https://github.com/boto/boto3/issues/3889
+filterwarnings = [
+    "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore"
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
