--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,11 +25,17 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: 3.13
-          cache: 'pip'
-      - name: Upgrade pip
-        run: pip install --upgrade pip
-      - name: Install poetry
-        run: pip install poetry
+      - name: Install Poetry
+        run: |
+          pip install --upgrade pip
+          pip install poetry
+      - name: Cache Poetry dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+      - name: Verify poetry.lock
+        run: poetry check --lock
       - name: Install dependencies
         run: poetry install
       - name: Run tests
