--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -78,6 +78,6 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v5
         with:
           aws-region: eu-west-1
-          role-to-assume: arn:aws:iam::075673041815:role/external/deployer
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
       - name: Deploy Lambda
         run: aws lambda update-function-code --function-name get-cookies --zip-file fileb://lambda.zip
