Update dependencies, group aws-sdk updates for dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,11 @@ updates:
     schedule:
       interval: "daily"
     rebase-strategy: "auto"
+    groups:
+      aws-sdk:
+        patterns:
+          - "boto3*"
+          - "botocore*"
     assignees:
       - "melvyndekort"
     reviewers:
